--- a/style.css
+++ b/style.css
@@ -43,6 +43,47 @@ form button:hover {
   background: #fda085;
   color: white;
 }
+
+.todo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-list {
+  min-width: 30%;
+  list-style: none;
+}
+
+.todo {
+  margin: 0.5rem;
+  background: white;
+  color: black;
+  font-size: 1.5rem;
+  /* all items (text, trash and check button) are next to each other */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.todo li {
+  flex: 1;
+}
+
+.delete-btn,
+.check-btn {
+  background: #ff6f47;
+  color: white;
+  border: none;
+  padding: 1rem;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.check-btn {
+  background: rgb(73, 204, 73);
+}
+
 /* 
 TODO:
 - box-sizing: 
