--- a/style.css
+++ b/style.css
@@ -99,6 +99,11 @@ form button:hover {
   opacity: 0.5;
 }
 
+.fall {
+  transform: translateY(10rem) rotateZ(20deg);
+  opacity: 0.1;
+}
+
 /* 
 TODO:
 - box-sizing: 
