--- a/style.css
+++ b/style.css
@@ -105,6 +105,44 @@ form button:hover {
   transition: 0.3s;
 }
 
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  outline: none;
+  border: none;
+}
+
+/* Get the div of class select */
+.select {
+  margin: 1rem;
+  position: relative;
+  overflow: hidden;
+}
+
+select {
+  color: #ff6f47;
+  width: 10rem;
+  cursor: pointer;
+  padding: 1rem;
+}
+
+.select::after {
+  content: "\25BC";
+  position: absolute;
+  background: #ff6f47;
+  top: 0;
+  right: 0;
+  padding: 1rem;
+  pointer-events: none;
+  transition: 0.3s ease all;
+}
+
+.select:hover::after {
+  background: white;
+  color: #ff6f47;
+}
+
 /* 
 TODO:
 - box-sizing: 
@@ -117,4 +155,5 @@ TODO:
 - align-items: center;
 - cursor: pointer;
 - transition: all 0.3s ease
+- ::after
  */
